--- a/src/main/resources/static/css/mediaIndex.css
+++ b/src/main/resources/static/css/mediaIndex.css
@@ -48,6 +48,67 @@
 }
 /*769 - 960*/
 @media screen and (max-width: 960px) {
+    .container-trip_detail {
+        margin: 0 7%;
+    }
+    .sulka {
+        margin: 0 auto;
+        text-align: center;
+        font-size: 20px;
+        padding-bottom: 20px;
+    }
+    .detail-trip_date h1 {
+        font-size: 25px;
+    }
+    .trip-detail_tovn p {
+        margin-top: 60px;
+        font-size: 28px;
+    }
+    .trip-detail_img img {
+        float: left;
+        margin-left: 0;
+        width: 100px;
+        height: 150px;
+    }
+
+    .button-exc {
+        padding-top: 60px;
+        margin-left: 60px;
+    }
+    .createExc {
+        box-sizing: border-box;
+        background: #FFD700;
+        color: #000000;
+        border-radius: 10px;
+        display: block;
+        width: 180px;
+        padding: 20px 0;
+        text-decoration: none;
+        text-align: center;
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: 15px;
+        cursor: pointer;
+    }
+    .burger-menu_link {
+        margin-top: 8px;
+        padding: 20px;
+        font-family: sans-serif;
+        font-size: 18px;
+        text-decoration: none;
+        text-transform: uppercase;
+        letter-spacing: 5px;
+        font-weight: bold;
+        color: #fff;
+        border: 2px solid #ffffff;
+        border-radius: 10px;
+    }
+    .container_2_item h3 {
+        font-size: 20px;
+    }
+    .container_2_item p {
+        font-size: 14px;
+    }
 .logo {
     margin-top: -2%;
     margin-left: 10%;
@@ -70,7 +131,25 @@
 }
 /*481 - 768*/
 @media screen and (max-width: 768px) {
+    .phone {
+        font-size: 16px;
+        color: #ffffff;
+    }
+    footer {
+        padding-bottom: 0;
+        background: #000000;
+        height: 150px;
+    }
+    .container_footer {
+        font-size: 16px;
+        color: #000000;
+    }
+    .container-trip_detail {
+        /* margin: 0; */
+        /* padding-top: 100px; */
+    }
     .pole {
+        margin-top: 20px;
         width: 100%;
         height: 50px;
     }
@@ -159,10 +238,48 @@ footer {
         padding: 4px;
         background: #ffb60d;
     }
+    .email {
+        font-size: 18px;
+        color: #ffffff;
+        margin-top: 80px;
+    }
 }
 /*320 - 480*/
 @media screen and (max-width: 480px) {
-	.fix-menu {
+    .logo {
+        width: 150px;
+    }
+    .burger-menu_button {
+        position: fixed;
+        float: right;
+        top: 5px;
+        right: 12%;
+        z-index: 30;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        background-color: #ffffff;
+        transition: 0.5s;
+    }
+    .burger-menu_lines, .burger-menu_lines::after, .burger-menu_lines::before {
+        position: absolute;
+        width: 30px;
+        height: 5px;
+        background-color: #000000;
+    }
+    .burger-menu_button {
+        position: fixed;
+        float: right;
+        top: 5px;
+        right: 4%;
+        z-index: 30;
+        width: 45px;
+        height: 45px;
+        border-radius: 50%;
+        background-color: #ffffff;
+        transition: 0.5s;
+    }
+    .fix-menu {
     position: fixed;
     width: 100%;
     height: 9%;
@@ -171,12 +288,12 @@ footer {
     .burger-menu_nav{
         top: 8%;
     }
-.title {
-    padding-top: 30%;
-    margin: 0 auto;
-    width: 83%;
-    background: rgb(96, 96, 96, 0.0);
-}
+    .title {
+        padding-top: 30%;
+        margin: 0 auto;
+        width: 100%;
+        background: #44444487;
+    }
 .title_first {
     font-size: 25px;
     color: #ffffff;
@@ -192,7 +309,7 @@ footer {
 }
 .button {
     box-sizing: border-box;
-    margin: 300px auto;
+    margin: 150px auto;
     background: #FFD700;
     color: #000000;
     border-radius: 10px;
@@ -206,5 +323,24 @@ footer {
     font-size: 18px;
     cursor: pointer;
 }
+    .kupsh {
+        margin-left: 3%;
+    }
+    .container-info {
+        margin: 0 7%;
+        padding-bottom: 0;
+    }
+    .container_footer {
+        margin: 0 7%;
+        padding-top: 0;
+        display: flex;
+        justify-content: space-around;
+        font-size: 16px;
+        color: #000000;
+    }
+    .phone {
+        font-size: 16px;
+        margin-top: 10px;
+    }
 
 }
