--- a/src/main/resources/static/css/mediaIndex.css
+++ b/src/main/resources/static/css/mediaIndex.css
@@ -72,7 +72,7 @@
     }
 
     .button-exc {
-        padding-top: 60px;
+        padding-top: 100px;
         margin-left: 60px;
     }
     .createExc {
@@ -131,6 +131,29 @@
 }
 /*481 - 768*/
 @media screen and (max-width: 768px) {
+    .infoCity {
+        text-align: left;
+        font-size: 16px;
+        color: white;
+        margin-top: 40px;
+        margin-left: 10px;
+    }
+    .infoCity a {
+        background: #FFD700;
+        color: #000000;
+        border-radius: 20px;
+        display: block;
+        padding: 3px 0;
+        text-decoration: none;
+        text-align: center;
+        font-weight: bold;
+        font-size: 14px;
+        cursor: pointer;
+        float: right;
+        width: 100px;
+        height: 20px;
+        margin-right: 20px;
+    }
     .phone {
         font-size: 16px;
         color: #ffffff;
